@startuml class-diagram
left to right direction
'        left
'down           up
'       right

' userStatus {
'     ACTIVE,"Mới đăng ký, chưa làm gì.","Xem phòng, sửa profile, nhưng KHÔNG ĐƯỢC đăng bài."
'     PENDING,"Đã gửi yêu cầu, chờ Admin duyệt.","Hiện thông báo: ""Đang chờ duyệt""."
'     APPROVED,Đã được Admin duyệt (Tương đương Verified).,Được phép Đăng bài (Create Apartment).
'     REJECTED,"Yêu cầu bị từ chối.","Hiện thông báo: ""Yêu cầu bị từ chối. Vui lòng liên hệ Admin để biết thêm chi tiết."""
'     LOCKED,"Vi phạm, bị Admin khóa.",Không đăng nhập được hoặc bị chặn mọi tính năng.
' }


class User{
    - id: string
    - fullName: string
    - email: string
    - phone: string
    - password: string
    - cccd: string
    - balance: decimal

    + Login(): void
    + Logout(): void
    + UpdateInfo(): void
}

class WalletBlockchain{
    - mspId: string
    - type: string
    ' - version: string
    - credentialsCertificate: string
    - credentialsPrivateKey: string
}
User "1" -up- "1..*" WalletBlockchain: has

' enum OwnerStatus {
'     APPROVED
'     PENDING
'     REJECTED
'     REVOKED
' }
class Owner{
    - id: string
    ' OwnerStatus
    - status: string

    + SignUp(): void
    + ManageAccount(): void
    + ManageApartment(): void
    + ManagementPost(): void
    + ManageContract(): void
    ' + ManageBookingRequest(): void
    + ManageIoTDevices(): void
}
' Owner --> OwnerStatus

' enum GuestStatus {
'     ACTIVE
'     BLOCKED
'     WARNING
' }
class Guest{
    - id: string
    - status: string

    + SignUp(): void
    + ManageAccount(): void
    + SearchApartment(): void
    + BookApartment(): void
    + ViewPassword(): void
    + ReportPost(): void
}
' Guest --> GuestStatus


class Admin{
    - id: string

    + ManagePost(): void
    + ManageUser(): void
    + ManageContract(): void
    + ManageIoTDevices(): void
    + ViewStatistics(): void
    
}
User <|-- Owner: is
User <|-right- Guest: is
User <|-left- Admin: is


' enum ApartmentStatus {
'     AVAILABLE
'     BOOKED
'     MAINTENANCE
'     UNAVAILABLE
' }
' enum ApartmentType {
'     STUDIO
'     ONE_BEDROOM
'     TWO_BEDROOM
'     PENTHOUSE
'     DUPLEX
' }
class Apartment{
    - id: string
    - codeApartment: string
    - dailyRate: decimal
    - maxOccupancy: int
    - description: string
    - pathImages: List<string>
    - status: string
    - address: string
    - latitude: double
    - longitude: double
    - type: string
    - requires: List<string>
    ' mật khẩu mở khóa căn hộ cho chủ căn hộ nếu không có người thuê
    - password: string 
    - checkInTime: time
    - checkOutTime: time


}
' Apartment --> ApartmentStatus
Owner "1" -- "0..*" Apartment: owns


class Amenity{
    - id: string
    - name: string
    - description: string
    ' vật dụng có thể định lượng được (ví dụ: khăn giấy, xà phòng, nước uống ...) hoặc không định lượng được (ví dụ: wifi, truyền hình cáp, bãi đỗ xe ...) 
    ' - isQuantifiable: bool
}
Apartment "1" -- "0..*" Amenity: includes
class AmenityInApartment{
    - id: string
    ' - quantity: int
    - isAvailable: bool
}
(Apartment, Amenity) .. AmenityInApartment: contains

' enum PostStatus {
'     PENDING
'     APPROVED
'     REJECTED
'     HIDDEN
' }

class IoTDevice{
    - id: string
    - name: string
    - description: string
}

' enum IoTDeviceStatus {
'     CONNECTED
'     MALFUNCTIONING
' }
Apartment "1" -- "0..*" IoTDevice: has
class IoTDeviceInApartment{
    - id: string
    - otp: string
    - status: string
    - pingCode: string
    ' - pingReply: string    
}
(Apartment, IoTDevice) .. IoTDeviceInApartment: contains

class Post{
    - id: string
    - header: string
    - description: string
    - status: string
    ' - publishedDate: datetime
}
' Post --> PostStatus
Post "1" -- "0..*" Apartment: advertises
Admin "0..*" -- "1" Post: manages
' enum ContentVilolationStatus {
'     REPORTED
'     UNDER_REVIEW
'     RESOLVED
'     DISMISSED
' }
' enum ContentVilolationType {
'     FAKE
'     INCORRECT_INFORMATION
' }
' class ContentVilolation{
'     - id: string
'     - description: string
'     - type: string
'     - reportedDate: datetime
'     - status: string
' }
' (Admin, Post) .. ContentVilolation: resolves
' ContentVilolation --> ContentVilolationStatus

' enum ContractStatus {
    ' "AVAILABLE"
    ' "BOOKED"
    ' "OCCUPIED"
' }

Guest "0..*" --- "0..*" Apartment: book
class Contract{
    - id: string
    'ngày tạo ~ ngày đặt phòng 
    - createdDate: datetime
    'ngày checkin ~ ngày nhận phòng 
    - startDate: datetime
    'ngày checkout ~ ngày trả phòng
    - endDate: datetime
    'danh sách các điều khoản trong hợp đồng
    - clause: List<string> 
    - status: string
    ' - pathFile: string
    - EscrowAmount: decimal


}
' Contract --> ContractStatus
(Guest, Apartment) .. Contract: have


' enum InvoiceStatus {
'     PAID
'     UNPAID
'     PENDING
'     CANCELLED
' }

class Invoice{
    - id: string
    - code: string
    - status: string
    ' ngày phát hành hóa đơn
    - issuedDate: datetime
    ' ngày hủy hóa đơn
    - cancellationDate: datetime
    ' giá phải trả = tổng chi tiết hóa đơn + VAT
    - totalAmount: decimal
    - note: string
}
Invoice "0..*" -- "1"Contract : has
' Invoice --> InvoiceStatus
' enum TransactionStatus {
'     SUCCESS
'     FAILED
' }

class Transaction{
    - id: string
    - amount: decimal
    - paymentMethod: string
    ' mã giao dịch từ cổng thanh toán dùng để đối soát
    - gatewayTransactionId: string
    ' ngày thanh toán
    - paymentDate: datetime
    ' DEPOSIT (Nạp), WITHDRAW (Rút), PAYMENT (Trả Invoice)
    - type: string
    - status: string
}
Transaction "1" -- "0..*" User: made
Invoice "1" -left- "1..*" Transaction: includes
class InvoiceDetail{
    - id: string
    ' phí thuê phòng, phí dọn dẹp, chăm sóc thú cưng, phí dịch vụ khác
    - description: string
    - quantity: int
    ' giá mỗi đơn vị
    - unitPrice: decimal
    ' subTotal = quantity * unitPrice
    - subTotal: decimal
}
Invoice "1" -right- "1..*" InvoiceDetail: includes
' enum MessageStatus{
'     SENT
'     DELIVERED
'     READ
' }
class Message{
    - id: string
    - content: string
    - status: string
    - sentDate: datetime
}
(Guest, Owner) .. Message: exchange
' Message --> MessageStatus
@enduml